//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  userName String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null, default: 'User']
  favMovies UserMovieFavorite [not null]
  favSeries UserSerieFavorite [not null]
  ratingsInMovie UserMovieRating [not null]
  ratingsInSerie UserSerieRating [not null]
  movieReviews MovieReview [not null]
  serieReviews SerieReview [not null]
  upvotedMovies UpvoteMovie [not null]
  downvotedMovies DownvoteMovie [not null]
  upvotedSeries UpvoteSerie [not null]
  downvotedSeries DownvoteSerie [not null]
  UserEpisodeRating UserEpisodeRating [not null]
  UserEpisodeFavorite UserEpisodeFavorite [not null]
}

Table UserEpisodeRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  episodeId Int [not null]
  episode Episode [not null]
}

Table UserMovieRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  movieId Int [not null]
  movie Movie [not null]
}

Table UserSerieRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  serieId Int [not null]
  serie Serie [not null]
}

Table UserMovieFavorite {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  user User [not null]
  movie Movie [not null]
}

Table UserSerieFavorite {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  user User [not null]
  serie Serie [not null]
}

Table UserEpisodeFavorite {
  id Int [pk, increment]
  userId Int [not null]
  episodeId Int [not null]
  user User [not null]
  episode Episode [not null]
}

Table SerieReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  serieId Int [not null]
  user User [not null]
  serie Serie [not null]
  upvotes UpvoteSerie [not null]
  downvotes DownvoteSerie [not null]
}

Table MovieReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  movieId Int [not null]
  user User [not null]
  movie Movie [not null]
  upvotes UpvoteMovie [not null]
  downvotes DownvoteMovie [not null]
}

Table UpvoteMovie {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  movieReviewId Int [not null]
  user User [not null]
  movie Movie [not null]
  movieReview MovieReview
}

Table UpvoteSerie {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  serieReviewId Int [not null]
  user User [not null]
  serie Serie [not null]
  serieReview SerieReview
}

Table DownvoteMovie {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  movieReviewId Int [not null]
  user User [not null]
  movie Movie [not null]
  movieReview MovieReview
}

Table DownvoteSerie {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  serieReviewId Int [not null]
  user User [not null]
  serie Serie [not null]
  serieReview SerieReview
}

Table Movie {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  duration String [not null, default: '']
  ratingImdb Float [not null, default: 5]
  releaseYear Int [not null, default: 2023]
  description String [not null, default: '']
  genres MovieGenre [not null]
  reviews MovieReview [not null]
  usersWhoBookmarkedIt UserMovieFavorite [not null]
  usersWhoRatedIt UserMovieRating [not null]
  usersUpvotes UpvoteMovie [not null]
  usersDownvotes DownvoteMovie [not null]
}

Table MovieGenre {
  id Int [pk, increment]
  movieId Int [not null]
  genreId Int [not null]
  movie Movie [not null]
  genre Genre [not null]
}

Table SerieGenre {
  id Int [pk, increment]
  serieId Int [not null]
  genreId Int [not null]
  serie Serie [not null]
  genre Genre [not null]
}

Table Genre {
  id Int [pk, increment]
  name String [not null, default: '']
  movies MovieGenre [not null]
  series SerieGenre [not null]
}

Table Serie {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  description String [not null, default: '']
  releaseYear Int [not null, default: 2020]
  ratingImdb Float [not null, default: 5]
  reviews SerieReview [not null]
  genres SerieGenre [not null]
  usersWhoBookmarkedIt UserSerieFavorite [not null]
  usersWhoRatedIt UserSerieRating [not null]
  usersUpvotes UpvoteSerie [not null]
  usersDownvotes DownvoteSerie [not null]
}

Table Episode {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  videoSrc String [not null, default: '']
  description String [not null, default: '']
  seasonId Int [not null]
  usersWhoBookmarkedIt UserEpisodeFavorite [not null]
  usersWhoRatedIt UserEpisodeRating [not null]
}

Ref: UserEpisodeRating.userId > User.id [delete: Cascade]

Ref: UserEpisodeRating.episodeId > Episode.id [delete: Cascade]

Ref: UserMovieRating.userId > User.id [delete: Cascade]

Ref: UserMovieRating.movieId > Movie.id [delete: Cascade]

Ref: UserSerieRating.userId > User.id [delete: Cascade]

Ref: UserSerieRating.serieId > Serie.id [delete: Cascade]

Ref: UserMovieFavorite.userId > User.id [delete: Cascade]

Ref: UserMovieFavorite.movieId > Movie.id [delete: Cascade]

Ref: UserSerieFavorite.userId > User.id [delete: Cascade]

Ref: UserSerieFavorite.serieId > Serie.id [delete: Cascade]

Ref: UserEpisodeFavorite.userId > User.id [delete: Cascade]

Ref: UserEpisodeFavorite.episodeId > Episode.id [delete: Cascade]

Ref: SerieReview.userId > User.id [delete: Cascade]

Ref: SerieReview.serieId > Serie.id [delete: Cascade]

Ref: MovieReview.userId > User.id [delete: Cascade]

Ref: MovieReview.movieId > Movie.id [delete: Cascade]

Ref: UpvoteMovie.userId > User.id [delete: Cascade]

Ref: UpvoteMovie.movieId > Movie.id [delete: Cascade]

Ref: UpvoteMovie.movieReviewId > MovieReview.id [delete: Cascade]

Ref: UpvoteSerie.userId > User.id [delete: Cascade]

Ref: UpvoteSerie.serieId > Serie.id [delete: Cascade]

Ref: UpvoteSerie.serieReviewId > SerieReview.id [delete: Cascade]

Ref: DownvoteMovie.userId > User.id [delete: Cascade]

Ref: DownvoteMovie.movieId > Movie.id [delete: Cascade]

Ref: DownvoteMovie.movieReviewId > MovieReview.id [delete: Cascade]

Ref: DownvoteSerie.userId > User.id [delete: Cascade]

Ref: DownvoteSerie.serieId > Serie.id [delete: Cascade]

Ref: DownvoteSerie.serieReviewId > SerieReview.id [delete: Cascade]

Ref: MovieGenre.movieId > Movie.id [delete: Cascade]

Ref: MovieGenre.genreId > Genre.id [delete: Cascade]

Ref: SerieGenre.serieId > Serie.id [delete: Cascade]

Ref: SerieGenre.genreId > Genre.id [delete: Cascade]